# SmartDesk

./: CMakeLists.txt  CMakeLists.txt.user.EQiOGc  CMakeLists.txt.user.JojjUK  CMakeLists.txt.user.KIyaVK  CMakeLists.txt.user.MCoqyX  CMakeLists.txt.user.OZRtuN  CMakeLists.txt.user.PJWkWe  CMakeLists.txt.user.PNXAkg  CMakeLists.txt.user.PYIrGs  CMakeLists.txt.user.StPvvM  CMakeLists.txt.user.VYePJC  CMakeLists.txt.user.WRjmeU  CMakeLists.txt.user.XnaHvS  CMakeLists.txt.user.YStSLb  CMakeLists.txt.user.bgkWSu  CMakeLists.txt.user.dEtErk  CMakeLists.txt.user.dtHPni  CMakeLists.txt.user.gRyjPk  CMakeLists.txt.user.glNAZb  CMakeLists.txt.user.kYPgYT  CMakeLists.txt.user.lzVxrL  CMakeLists.txt.user.mLfOXR  CMakeLists.txt.user.nnCkkC  CMakeLists.txt.user.oMWkEN  CMakeLists.txt.user.pgMrmm  CMakeLists.txt.user.rLXRsF  CMakeLists.txt.user.uYiGuB  CMakeLists.txt.user.viDifB  CMakeLists.txt.user.vpWLeT  CMakeLists.txt.user.vxjobP  CMakeLists.txt.user.wvCQXz  CMakeLists.txt.user.xxEmKu  CMakeLists.txt.user.yrxjzG  DLfromNet.cpp  DLfromNet.h  DLfromNet.ui  DatabaseManager.cpp  EditedLog.cpp  EditedLog.h  README.md  (+55 more)
.build/: SmartDesk.db  SmartDesk.db-journal  SmartDesk.sqbpro  help.txt
.build/1.0/: SmartDesk.iss
.build/1.1/: Smart_1.1.iss
.build/1.1.1/: SmartDesk1_1_1.iss
.build/Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  CMakeCache.txt.prev  CPackConfig.cmake  CPackSourceConfig.cmake  SmartDesk.db  build.ninja  cmake_install.cmake  history.txt  log.txt  mytxt.db  qtcsettings.cmake  settings.ini
.build/Debug/.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
.build/Release/: .ninja_deps  .ninja_log  CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  SmartDesk.db  build.ninja  cmake_install.cmake  qtcsettings.cmake  settings.ini
.build/SmartDesk1.1/: SmartDesk_setup.iss  help.txt
.build/app/: SmartDesk.db  settings.ini
.build/user/: test20241224155632.txt
DisposeAbstract/DisposeIMG/: TabHandleIMG.cpp
include/: DInfo.h  DLfromNet.h  DLogin.h  TagItemDelegate.h  WFileTag.h  WSchedule.h  WidgetFunctional.h  csvLinkServer2.h  mainwindow.h
manager/: DBManagerFac.h  DBMySQL.cpp  DBMySQL.h  DBSQlite.cpp  DBSQlite.h  DatabaseManager.cpp  DatabaseManager.h  ServerManager.cpp  ServerManager.h  ipaddress.cpp  ipaddress.h  myJson.cpp
resources/: res.qrc
src/: DInfo.cpp  DLfromNet.cpp  DLogin.cpp  DTag.cpp  FileItemWidget.cpp  Setting.cpp  TagItemDelegate.cpp  WFileTag.cpp  WOnlineDoc.cpp  WSchedule.cpp  WidgetFunctional.cpp  csvLinkServer2.cpp  mainwindow.cpp
tmp/: WidgetRU.cpp  WidgetRU.h  WidgetRU.ui
ui/: DInfo.ui  FileItemWidget.ui  WFileTag.ui  WSchedule.ui  WidgetFunctional.ui  csvLinkServer2.ui  mainwindow.ui
(+1090 files in other folders)
